--- a/css/custom.css
+++ b/css/custom.css
@@ -2,6 +2,27 @@ h1,h2,h3,h4,h5 {
 	font-weight:600 !important;
 }
 
+h1 { font-size: 250% !important;}
+
+h2 { font-size: 200% !important;}
+article > h2::before{ content: "♕ ";}
+
+h3 { font-size: 175% !important;}
+article > h3::before{	content:"♖ ";}
+
+h4 { font-size: 150% !important;}
+article > h4::before{	content:"♗ ";}
+
+h5 { font-size: 110% !important;}
+article > h5::before{	content:"♘ ";}
+
+h6 { font-size: 100% !important;}
+article > h6::before{	content:"♙ ";}
+
+ul > li > ul > li {
+	list-style: circle;
+}
+
 code {
 	font-family: Menlo,Monaco,Consolas,"Courier New",monospace !important;
 }
